--- a/Ajith.html
+++ b/Ajith.html
@@ -1,3 +1,13 @@
 <center>
   <h1>Ajith</h1>
 </center>
+<hr>
+<p>
+  Ajith Kumar (born 1 May 1971) is an Indian actor who works predominantly in Tamil cinema. To date, he has starred in over 61 films, and won four Vijay Awards, three Cinema Express Awards, three Filmfare Awards South and three Tamil Nadu State Film Awards. In addition to his acting career, Ajith is also a sports car racer and participated in the MRF Racing series (2010). He became a race car driver, competing in circuits around India in places such as Mumbai, Chennai and Delhi. He is one among very few Indians to race in the International arena and in Formula championships. Based on the annual earnings of Indian celebrities, he was included in the Forbes India Celebrity 100 list three times.[1]
+
+Ajith began his career with a small role in the 1990 Tamil romantic drama En Veedu En Kanavar. After his first major breakthrough Aasai (1995), Ajith established himself as a romantic hero with Kadhal Kottai (1996), Kaadhal Mannan (1998) and Aval Varuvala (1998), and established himself as an action hero starting with the film Amarkalam (1999). Ajith's dual portrayal of twin brothers—where one is deaf-mute—in S. J. Suryah's Vaali (1999) won him his first Filmfare Award for Best Actor – Tamil. He earned critical acclaim for his dual roles in the vigilante film Citizen (2001).[2] He was also praised for his dual role performance in K. S. Ravikumar’s Villain (2002) where he won his second Filmfare Award for Best Actor - Tamil. In 2006, he starred in K. S. Ravikumar's Varalaru, in which he played three different roles including one of a classical Bharatanatyam dancer. It became the highest-grossing Tamil film of 2006, and earned him another Filmfare Award for Best Actor – Tamil.[3] The following year he starred in two remakes—Kireedam (2007) and Billa (2007),[a] both of which earned him critical acclaim.[3] Ajith played an antagonist in his 50th film Mankatha (2011),[4] which became one of the highest-grossing Tamil films of all time.[5] His next release, Billa II (2012), was Tamil cinema's first prequel.[b]
+
+Ajith has also been abroad for various races, including Germany and Malaysia. He drove in the 2003 Formula Asia BMW Championships.[7] He raced in the 2010 Formula 2 Championship along with two Indians, Armaan Ebrahim and Parthiva Sureshwaren.[8]
+
+
+</p>
